--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 <body>
     <form class="formulary" method="POST" onSubmit="return validation()" action="/validation">
         <section class="section__formulary">
-            <div class="first__section-division"></div>
+
+            <div class="first__section-division">
+                <label for="puesto">Puesto que solicita:</label>
+                <input id="puesto" name="puesto" type="text" placeholder="Puesto solicitado">
+                <p>Sea tan amable de llenar esta solicitud</p>
+                <p>NOTA: Toda informacion aqui proporcionada sera tratada confidencialmente</p>
+            </div>
+
             <div class="first__section-division">
                 <div class="first__section-subdivision">
                     <div class="first__section-horizontal_section">
@@ -40,12 +47,30 @@
         </section>
 
         <section class="section__formulary">
+            <div class="first__section-division">
+
+            </div>
         </section>
 
         <section class="section__formulary">
+            <div class="first__section-division">
+                <div class="first__section-content-input-mini">
+                    <label for="clave-unica">Clave Unica de Registro de Poblacion</label>
+                    <input id="clave-unica" name="clave-unica" type="text" placeholder="******">
+
+                </div>
+                <div class="first__section-horizontal_section-m"></div>
+                <div class="first__section-subvision-doble">
+
+                </div>
+
+            </div>
         </section>
 
         <section class="section__formulary">
+            <div class="first__section-division">
+
+            </div>
         </section>
 
         <button type="submit">enviar</button>
