--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="first__section-subdivision"></div>
+                <div class="first__section-subdivision">
+
+                </div>
             </div>
         </section>
 
@@ -89,12 +91,12 @@
                                         <div class="first__section-subvision-dobles">
                                             <div class="section__mini-bloque">
                                                 <label for="fecha-nac">Fecha Nacimiento</label>
-                                                <input type="text" id="fecha-nac" name="fecha-nac">
+                                                <input type="text" id="fecha-nac" name="fecha-nac" placeholder="12/12/1993">
 
                                             </div>
                                             <div class="section__mini-bloque">
                                                 <label for="estatura">Estatura</label>
-                                                <input type="text" id="estatura" name="estatura">
+                                                <input type="text" id="estatura" name="estatura" placeholder="cm">
 
 
                                             </div>
@@ -107,7 +109,7 @@
                                             </div>
                                             <div class="section__mini-bloque">
                                                 <label for="peso">Peso</label>
-                                                <input type="text" id="peso" name="peso">
+                                                <input type="text" id="peso" name="peso" placeholder="kg">
                                             </div>
 
                                         </div>
@@ -187,7 +189,7 @@
             <div class="first__section-division">
                 <div class="first__section-content-input-mini">
                     <label for="clave-unica">Clave Unica de Registro de Poblacion</label>
-                    <input id="clave-unica" name="clave-unica" type="text" placeholder="******">
+                    <input id="clave-unica" name="clave-unica" type="text" placeholder="* * * * * *">
 
                 </div>
                 <div class="first__section-horizontal_section-m">
@@ -274,13 +276,15 @@
                         </div>
                     </div>
                 </div>
-
+                    <div class="boton">
+                        <button type="submit">Enviar</button>
+                        <button type="reset">Resetear</button>
+                    </div>
 
             </div>
         </section>
-
-        <button type="submit">Enviar</button>
-        <button type="reset">Resetear</button>
+        
+         
     </form>
 </body>
 </html>
